--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,11 @@
-
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 
 body {
+    padding-top: 100px;
     background-color: teal;
     display: flex;
     justify-content: center;
@@ -14,27 +19,34 @@ h1 {
     margin-top: 10px;
 }
 
-.wrapper{
-    height: 400px;
-    width: 400px;
-    background: white;
-    border: 1px solid black;
+.container,
+#container {
+    display: grid;
+    background-color: white;
+    height: 500px;
+    width: 500px;
+    
+    
 }
 
-#clearboard {
+
+button {
     background-color: black;
+    
     color: white;
     padding-top: 10px;
     padding-bottom: 10px;
     padding-left: 10px;
     padding-right: 10px;
-    margin-top: 500px;
-
-    
 }
 
 
 .cell {
-    background-color: thistle;
-    border: 1px solid black;
+    
+    border: .5px solid black;
+}
+
+#blue {
+    color: coral;
+    
 }
