--- a/styles.css
+++ b/styles.css
@@ -5,8 +5,8 @@
 }
 
 body {
-    padding-top: 100px;
-    background-color: teal;
+    margin-top: 64px;
+    background-color: rgb(118, 65, 204);
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -27,12 +27,13 @@ h1 {
     background-color: white;
     height: 500px;
     width: 500px;
+    border: 3px solid black;
 }
 
 button {
     font-weight: bold;
-    margin-top: 10%;
-    margin-bottom: 10%;
+    margin-top: 1%;
+    margin-bottom: 5%;
     border-radius: 13%;
     background-color: black;
     color: white;
@@ -40,8 +41,41 @@ button {
     padding-bottom: 10px;
     padding-left: 10px;
     padding-right: 10px;
+    cursor: pointer;
 }
 
 .cell {
     border: .5px solid black;
 }
+
+.colorSelector {
+    display: flex;
+    margin: 20px;
+    justify-content: center;
+    flex-direction: column;
+}
+
+ label {
+    display: flex;
+    flex-direction: column;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+input[type="color"]{
+	width: 40px;
+	height: 40px;
+	border: none;
+	border-radius: 40px;
+	background: none;
+    margin-left: 35px;
+    cursor: pointer;
+}
+input[type="color"]::-webkit-color-swatch-wrapper {
+	padding: 0;
+}
+input[type="color"]::-webkit-color-swatch {
+	border: solid 1px rgb(0, 0, 0); 
+	border-radius: 40px;
+}
+
